--- a/microservices/ui/app/src/styles/splash.css
+++ b/microservices/ui/app/src/styles/splash.css
@@ -17,30 +17,25 @@
 
 .panel_1 a {
  /* background-color: rgba(255, 255, 255, 0.35); */
- background-color: darkcyan;
- color: white;
+ background-color: white;
+ color: darkgray;
  border-radius: 5px;
  text-decoration: none;
  padding: 15px;
- border: 2px solid darkcyan;
  font-weight: 600;
- text-shadow: black 3px 3px 3px;
 }
 .panel_1 a:hover {
-  background-color: #f2f2f2;
-  color: #f7a072;
+  background-color: #f5f5f5;
   text-shadow: none;
   -webkit-transform: scale(1.05);
   -moz-transform: scale(1.05);
   -o-transform: scale(1.05);
   -ms-transform: scale(1.05);
   transition: all 0.2s ease;
-  text-shadow: lightgrey 3px 3px 3px;
-  border: 2px solid #f2f2f2;
 }
 
 .panel_2 {
- background-color: ##f5f5f5;
+
 }
 
 .panel_2 p {
