--- a/microservices/ui/app/src/styles/footer.css
+++ b/microservices/ui/app/src/styles/footer.css
@@ -1,9 +1,7 @@
 .footer-bar {
   width: 100%;
   height: 65px;
-  background-color: #F7A072;
-  border-top: 1px solid white;
-  bottom: 0;
+  background: white;
 }
 
 .footer-content {
@@ -11,6 +9,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  color: darkgray;
 }
 
 .footer-content h3 {
@@ -33,16 +32,13 @@
 }
 
 .footer-links a {
-  color: black;
+  color: darkgray;
   padding-left: 10px;
   padding-right: 10px;
   text-decoration: none;
 }
 
-.footer-links a:visited {
-  color: black;
-}
-
 .footer-links a:hover{
-  color: #f1f1f1;
+  color: black;
+  transition: color 0.2s ease;
 }
