--- a/microservices/ui/app/src/styles/explore.css
+++ b/microservices/ui/app/src/styles/explore.css
@@ -71,18 +71,22 @@ body {
 
 .topics-list {
   display:flex;
+  justify-content: center;
   flex-wrap: wrap;
-  margin-left: 125px;
-  padding-bottom: 153px;
+  width: 610px;
+  padding: 20px;
+  margin: 0px;
+  background: #f5f5f5;
 }
 
 
 body {
-  background-color: #B5E2FA;
+  background-color: #f5f5f5;
 }
 
 .topic-image {
-  border: 2px solid white;
+  margin-right: 3px;
+  margin-bottom: 3px;
 }
 
 .topic-name {
@@ -93,14 +97,10 @@ body {
   height: 150px;
   justify-content: center;
   align-items: center;
-  text-shadow: 3px 3px 3px black;
   font-size: 25px;
-  /* opacity: 0; */
-  /* top: 150px;
-  left: 125px; */
   color: white;
-  /* padding: none; */
   margin-top: -0.1px;
+  text-shadow: 3px 3px 3px #333;
 }
 
 #topic-name {
@@ -108,13 +108,14 @@ body {
 }
 
 .topic-name:hover {
-  color: #FF7F50;
   font-size: 31px;
-  box-shadow: 0 0 6px 8px white;
-  /* -webkit-transform: scale(1.21);
-  -moz-transform: scale(1.21);
-  -o-transform: scale(1.21);
-  -ms-transform: scale(1.21); */
   transition: all 0.2s ease;
   border-radius: 10px;
+}
+
+.topics-list-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: white;
 }
