--- a/microservices/ui/app/src/styles/topics.css
+++ b/microservices/ui/app/src/styles/topics.css
@@ -2,3 +2,31 @@
   width: 100%
   object-fit: cover;
 }
+
+
+.topic-list-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0.8;
+  width: 300px;
+  height: 50px;
+  margin: 10px;
+  border-radius: 15px;
+  background: #0FA3B1;
+  color: white;
+}
+
+.link {
+  text-decoration: none;
+}
+
+.topic-list-item:hover {
+  opacity: 1.0;
+  cursor: pointer;
+  -webkit-transform: scale(1.05);
+  -moz-transform: scale(1.05);
+  -o-transform: scale(1.05);
+  -ms-transform: scale(1.05);
+  transition: all 0.3s ease;
+}
