--- a/microservices/ui/app/src/styles/explore.css
+++ b/microservices/ui/app/src/styles/explore.css
@@ -119,3 +119,24 @@ body {
   align-items: center;
   background: white;
 }
+
+.rooms-list {
+  width: 60vw;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  background: white;
+  margin-top: 0px;
+  margin-left: 20vw;
+  margin-right: 20vw;
+}
+
+.room {
+  text-decoration: none;
+  color: darkgray;
+}
+
+.room:hover {
+  color: #333;
+  transition: color 0.2s ease;
+}
