--- a/microservices/ui/app/src/styles/footer.css
+++ b/microservices/ui/app/src/styles/footer.css
@@ -1,8 +1,24 @@
+body {
+  margin: 0;
+  padding: 0;
+  height: auto !important;
+  height: 100%;
+}
+
+.main {
+  position: relative;
+  min-height: 100%;
+  margin: 0;
+  padding: 0;
+  height: auto !important;
+  padding-bottom: 65px;
+}
+
 .footer-bar {
   position: absolute;
-  bottom: 0;
   width: 100%;
   height: 65px;
+  bottom: 0;
   background: white;
 }
 
